# work-logger

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  wlog.cpp
include/billing/: constants.hpp
include/command/: command.hpp  log.hpp  setup.hpp
include/flow/: client.hpp  flow_utils.hpp  setup.hpp
include/invoice/: generator.hpp
include/report/: work_log.hpp
include/storage/: client.hpp  config.hpp
src/: CMakeLists.txt  main.cpp
src/command/: CMakeLists.txt  command.cpp  log.cpp  setup.cpp
src/command/subcommand/: setup.cpp  setup.hpp
src/flow/: CMakeLists.txt  client.cpp  flow_utils.cpp  setup.cpp
src/invoice/: CMakeLists.txt  generator.cpp
src/report/: CMakeLists.txt  work_log.cpp
src/storage/: CMakeLists.txt  client.cpp  config.cpp
tests/: CMakeLists.txt  test_client.cpp  test_config.cpp  test_invoice.cpp  test_work_log.cpp
